--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Plus Final Project</title>
     <link rel="stylesheet" href="src/style.css" />
+    <title>Plus Final Project</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Test</h1>
+  </body>
   <script src="src/app.js"></script>
 </html>
