--- a/index.html
+++ b/index.html
@@ -5,10 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      crossorigin="anonymous"
+    />
     <title>Plus Final Project</title>
   </head>
   <body>
-    <h1>Test</h1>
+    <div class="container">
+      <div class="weather-app">
+        <h1>Barrie, Ontario</h1>
+        <ul>
+          <li>Tuesday 21:00</li>
+          <li>Clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+              alt="Partly Cloudy"
+            />
+            1 °C | °F
+          </div>
+          <div class="col-md-6">
+            <ul>
+              <li>Precipitation: 0%</li>
+              <li>Humidity: 73%</li>
+              <li>Wind: 2km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small>
+        <a
+          href="https://github.com/AlexvonKarstedt/Plus-Final-Project"
+          target="_blank"
+        >
+          Open-Source Code
+        </a>
+        by Alexandra von Karstedt
+      </small>
+    </div>
   </body>
   <script src="src/app.js"></script>
 </html>
