--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
             </ul>
             <div class="row">
               <div class="col-md-6">
-                <div class="clearfix">
+                <div class="clearfix weather-temperature">
                   <img
                     src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
                     alt="Partly Cloudy"
                     class="float-left"
                   />
-                  <div class="float-left">
-                    <strong>1</strong>
+                                      <strong>1</strong>
                     <span class="units">°C | <a href="#">°F </a></span>
                   </div>
                 </div>
