--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <title>Plus Final Project</title>
   </head>
   <body>
@@ -18,10 +20,10 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="overview">
-            <h1>Barrie, Ontario</h1>
+            <h1 id="city"></h1>
             <ul>
-              <li>Tuesday 21:00</li>
-              <li>Clear</li>
+              <li>Last updated: <span class="date"></span></li>
+              <li id="description"></li>
             </ul>
             <div class="row">
               <div class="col-md-6">
@@ -31,7 +33,8 @@
                     alt="Partly Cloudy"
                     class="float-left"
                   />
-                                      <strong>1</strong>
+                  <div class="float-left">
+                                      <strong id="temperature"></strong>
                     <span class="units">°C | <a href="#">°F </a></span>
                   </div>
                 </div>
@@ -39,11 +42,12 @@
               <div class="col-md-6">
                 <ul>
                   <li>Precipitation: 0%</li>
-                  <li>Humidity: 73%</li>
-                  <li>Wind: 2km/h</li>
+                  <li>Humidity: <span id="humidity"></span></li>
+                  <li>Wind: <span id="wind"></span> KM/H</li>
                 </ul>
               </div>
             </div>        
+                  </div>
                   </div>
                   <small>
           <a
