--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
           <div class="overview">
             <h1 id="city"></h1>
             <ul>
-              <li>Last updated: <span class="date"></span></li>
+              <li>Last updated: <span id="date"></span></li>
               <li id="description"></li>
             </ul>
             <div class="row">
               <div class="col-md-6">
                 <div class="clearfix weather-temperature">
                   <img
-                    src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                    alt="Partly Cloudy"
+                    src=""
+                    id="icon"
                     class="float-left"
                   />
-                  <div class="float-left">
+                  
                                       <strong id="temperature"></strong>
                     <span class="units">°C | <a href="#">°F </a></span>
                   </div>
@@ -45,8 +45,7 @@
                   <li>Humidity: <span id="humidity"></span></li>
                   <li>Wind: <span id="wind"></span> KM/H</li>
                 </ul>
-              </div>
-            </div>        
+              </div>        
                   </div>
                   </div>
                   <small>
