--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
             type="search" 
             placeholder="Enter your city..."
             class="form-control"
+            id="city-input"
           />
           </div>
           <div class="col-3">
-          <input type="submit" value="Search" class="btn btn-primary"/>
+          <input type="submit" value="Search" class="btn btn-primary" w-100/>
           </div>
           </div>
           </form>
