--- a/index.html
+++ b/index.html
@@ -19,20 +19,25 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
-          <form id="search-form">
+          <form id="search-form" class="mb-3">
             <div class="row">
-            <div class="col-9">
-            <input 
-            type="search" 
-            placeholder="Enter your city..."
-            class="form-control"
-            id="city-input"
-          />
-          </div>
-          <div class="col-3">
-          <input type="submit" value="Search" class="btn btn-primary" w-100/>
-          </div>
-          </div>
+              <div class="col-9">
+                <input
+                  type="search"
+                  placeholder="Type a city.."
+                  class="form-control"
+                  id="city-input"
+                  autocomplete="off"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="Search"
+                  class="btn btn-primary w-100"
+                />
+              </div>
+            </div>
           </form>
           <div class="overview">
             <h1 id="city"></h1>
@@ -40,38 +45,39 @@
               <li>Last updated: <span id="date"></span></li>
               <li id="description"></li>
             </ul>
-            <div class="row">
-              <div class="col-md-6">
-                <div class="clearfix weather-temperature">
-                  <img
-                    src=""
-                    id="icon"
-                    class="float-left"
-                  />
-                  
-                                      <strong id="temperature"></strong>
-                    <span class="units"><a href="#" id="celsius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link">°F </a></span>
-                  </div>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temperature">
+                <img src="" alt="Clear" id="icon" class="float-left" />
+                <div class="float-left">
+                  <strong id="temperature"></strong
+                  ><span class="units"
+                    ><a href="#" id="celsius-link" class="active">°C</a> |
+                    <a href="#" id="fahrenheit-link">°F</a></span
+                  >
                 </div>
               </div>
-              <div class="col-md-6">
-                <ul>
-                  <li>Precipitation: 0%</li>
-                  <li>Humidity: <span id="humidity"></span></li>
-                  <li>Wind: <span id="wind"></span> KM/H</li>
-                </ul>
-              </div>        
-                  </div>
-                  </div>
-                  <small>
-          <a
-            href="https://github.com/AlexvonKarstedt/Plus-Final-Project"
-            target="_blank"
-          >
-            Open-Source Code
-          </a>
-          by Alexandra von Karstedt
-        </small>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
+              </ul>
+            </div>
+          </div>
+          <div class="row weather-forecast">
+            <div class="row weather-forecast" id="forecast"></div>
+          </div>
+          <small>
+            <a
+              href="https://github.com/AlexvonKarstedt/Plus-Final-Project"
+              target="_blank"
+            >
+              Open-Source Code
+            </a>
+            by Alexandra von Karstedt
+          </small>
         </div>
       </div>
     </div>
